fix alignment on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,11 @@ a:hover {
   color: #535bf2;
 }
 
+details {
+  cursor: pointer;
+  padding: 0;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
